add: api/clientes
