# routes/api.php
@@ -56,6 +56,17 @@ Route::middleware(['auth:sanctum'])->group(function () {
     Route::delete('/delete-user', [UsuarioControllers::class, 'deleteuser']);
     // Route::post('adduser', [UsuarioControllers::class, 'adduser'])->name('usuarios.adduser');
     // Route::post('updateuser', [UsuarioControllers::class, 'updateuser'])->name('usuarios.update');
+
+    //! SISTEMA EXPEDIENTES
+    Route::get('/clientes', [App\Http\Controllers\dashboard\ClientesController::class, 'mostrarClientes']);
+    //         Route::get('expedientes-reportes', [ExpReportesController::class, 'mostrarReportes'])->name('sistema_expedientes.expedientesReportes');
+
+    //         // ? CLIENTE
+    //         Route::post('addCliente', [App\Http\Controllers\dashboard\ClientesController::class, 'addCliente'])->name('sistema_expedientes.addCliente');
+    //         Route::post('updateCliente', [App\Http\Controllers\dashboard\ClientesController::class, 'updateCliente'])->name('sistema_expedientes.updateCliente');
+    //         Route::post('deleteCliente', [App\Http\Controllers\dashboard\ClientesController::class, 'deleteCliente'])->name('cliente.delete');
+    //         Route::post('datos-cliente', [App\Http\Controllers\dashboard\ClientesController::class, 'datosCliente']);
+    //         Route::post('datos-cliente2', [App\Http\Controllers\dashboard\ClientesController::class, 'datosCliente2']);
 });
 
 
@@ -69,18 +80,6 @@ Route::middleware(['auth:sanctum'])->group(function () {
 
 
 
-//         //! SISTEMA EXPEDIENTES
-//         // Route::get('expedientes-Home', [ExpedientesController::class, 'mostrarExpedientes'])->name('sistema_expedientes.expedientesHome');
-//         // Route::get('alertas', [AlertasController::class, 'mostrarAlertas'])->name('sistema_expedientes.expedientesAlertas');
-//         Route::get('clientes', [App\Http\Controllers\dashboard\RegistroClientesController::class, 'mostrarClientes'])->name('sistema_expedientes.expedientesRegistroClientes');
-//         Route::get('expedientes-reportes', [ExpReportesController::class, 'mostrarReportes'])->name('sistema_expedientes.expedientesReportes');
-
-//         // ? CLIENTE
-//         Route::post('addCliente', [App\Http\Controllers\dashboard\RegistroClientesController::class, 'addCliente'])->name('sistema_expedientes.addCliente');
-//         Route::post('updateCliente', [App\Http\Controllers\dashboard\RegistroClientesController::class, 'updateCliente'])->name('sistema_expedientes.updateCliente');
-//         Route::post('deleteCliente', [App\Http\Controllers\dashboard\RegistroClientesController::class, 'deleteCliente'])->name('cliente.delete');
-//         Route::post('datos-cliente', [App\Http\Controllers\dashboard\RegistroClientesController::class, 'datosCliente']);
-//         Route::post('datos-cliente2', [App\Http\Controllers\dashboard\RegistroClientesController::class, 'datosCliente2']);
 
 //         Route::middleware(['verificarAccesoJudicial'])->group(function () {
 //             // CEJ judicial
